fix: Yomitan selection made text illegible in dark mode

--- a/apps/web/src/components/MangaReader/TextBox.module.css
+++ b/apps/web/src/components/MangaReader/TextBox.module.css
@@ -44,4 +44,8 @@
   user-select: text;
   white-space: nowrap;
   writing-mode: var(--writing-mode);
+
+  &::selection {
+    background-color: var(--mantine-color-blue-1);
+  }
 }
